--- a/layouts/medium.css
+++ b/layouts/medium.css
@@ -79,6 +79,19 @@ nav {
   font-size: 13pt;
 }
 
+
+.social-icon {
+  height: min(4vw, 24pt);
+}
+footer {
+  grid-template-columns: min(36vw, 240pt) 1fr;
+  grid-template-rows:
+    1fr
+    min(4.5vw, 28pt)
+    1fr;
+  font-size: min(2vw, 12pt);
+}
+
 #main {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
