--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: papayawhip;
   margin-top: 24pt;
+  background-image: url("resources/background.avif");
 }
 .center-text {
   display: flex;
@@ -8,8 +9,16 @@ body {
   align-content: center;
   flex-direction: column;
 }
+.center-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #grid-container {
   display: grid;
+}
+#grid-container > *:not(.margin) {
+  background-color: rgb(255, 239, 213, 0.8);
 }
 #left-margin {
   grid-area: margin-l;
@@ -95,9 +104,12 @@ footer {
 #main {
   display: grid;
 }
+#main > div {
+  background-color: rgb(255, 255, 255, 0.75);
+}
 
 header {
-  background-color: lightcoral;
+  background-color: rgb(255, 239, 213, 0.75);
 }
 #main > div {
   border: 0.1vw solid black;
@@ -112,17 +124,16 @@ header {
   padding-right: 1em;
   padding-top: 0.25em;
   padding-bottom: 0.25em;
-  opacity: 0.75;
 }
 #shortcap {
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.75);
 }
 #longcap {
-  background-color: darkgreen;
+  background-color: rgb(0, 100, 0, 0.75);
   color: white;
 }
 #inline-credit {
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.75);
   bottom: 5%;
   right: 0;
   font-size: 1vw;
@@ -156,17 +167,14 @@ header {
 
 #menu {
   display: grid;
-  gap: 0.1vw;
-  background-color: black;
-  border: 0.1vw solid black;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
 }
 .menu-item:nth-child(2n) {
-  background-color: darkgreen;
+  background-color: rgb(0, 100, 0, 0.85);
 }
 .menu-item:nth-child(2n + 1) {
-  background-color: rgb(48, 148, 48);
+  background-color: rgb(48, 148, 48, 0.85);
 }
 .menu-item div {
   color: white;
@@ -178,8 +186,9 @@ header {
   color: black;
 }
 
-aside {
-  margin: auto;
+aside > div {
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
 }
 
 @keyframes flashing-text {
