add body padding

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
 }
 #grid-container > *:not(.margin) {
   background-color: rgb(255, 239, 213, 0.8);
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 #left-margin {
   grid-area: margin-l;
@@ -111,16 +113,10 @@ footer {
 header {
   background-color: rgb(255, 239, 213, 0.75);
 }
-#main {
-  padding: 0.5vw;
-}
 #main > div {
   border: 0.1vw solid black;
   margin: 0.5vw;
   padding: 0.5vw;
-}
-.social-icon:hover {
-  background-color: brown;
 }
 
 .caption {
@@ -234,5 +230,4 @@ footer {
 }
 #social-media {
   text-align: right;
-  padding-right: 1vw;
 }
