--- a/layouts/medium.css
+++ b/layouts/medium.css
@@ -80,16 +80,16 @@ nav {
 }
 
 .social-icon {
-  height: min(4vw, 24pt);
-  width: min(4vw, 24pt);
+  height: 3.2vw;
+  width: 3.2vw;
 }
 footer {
-  grid-template-columns: min(36vw, 240pt) 1fr;
+  grid-template-columns: 30vw 1fr;
   grid-template-rows:
     1fr
-    min(4.5vw, 28pt)
+    3.5vw
     1fr;
-  font-size: min(2vw, 12pt);
+  font-size: 1.6vw;
 }
 
 #main {
