--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -75,19 +75,19 @@ nav {
 }
 
 #subscribe {
-  grid-template-columns: 72pt 2fr 1fr;
+  grid-template-columns: 2.8vw 2fr 1fr;
   grid-template-areas: "subscribe-icon subscribe-text form";
 }
 #subscribe > img {
-  height: 36pt;
+  height: 2.8vw;
+  width: 2.8vw;
 }
 
 #subscribe > p {
-  font-size: 16pt;
+  font-size: 1.3vw;
 }
-
 input {
-  font-size: 13pt;
+  font-size: 1vw;
 }
 
 .social-icon {
