--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ aside {
 #subscribe {
   border-top: 1px dotted black;
   display: grid;
+  gap: 1.5vw;
   border-bottom: 1px dotted black;
 }
 #subscribe > * {
