--- a/layouts/narrow.css
+++ b/layouts/narrow.css
@@ -79,7 +79,7 @@ nav {
   height: 4.5vw;
 }
 #subscribe > p {
-  font-size: 2.4vw;
+  font-size: 2.5vw;
 }
 input {
   font-size: 2.2vw;
@@ -96,4 +96,7 @@ footer {
     4.8vw
     1fr;
   font-size: 2.1vw;
+}
+.content {
+  font-size: 2.5vw;
 }
