--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: papayawhip;
-  margin-top: 5vw;
-  margin-bottom: 5vw;
+  margin-top: 2.5vw;
+  margin-bottom: 2.5vw;
   background-image: url("resources/background.avif");
 }
 .center-text {
@@ -221,14 +221,15 @@ footer {
 #main {
   display: grid;
 }
-#main > div {
+.content {
   background-color: rgb(255, 255, 255, 0.5);
-}
-#main > div {
   border: max(0.1vw, 1pt) solid black;
   margin: 0.5vw;
   padding: 1vw;
 }
-#main img {
+.content img {
   width: 100%;
+}
+.content h3 {
+  text-align: center;
 }
