--- a/style.css
+++ b/style.css
@@ -122,6 +122,12 @@ footer {
   background-color: rgb(0, 100, 0, 0.75);
   color: white;
 }
+#shortcap:hover {
+  background-color: rgb(255, 255, 255, 1);
+}
+#longcap:hover {
+  background-color: rgb(0, 100, 0, 1);
+}
 #inline-credit {
   background-color: rgb(255, 255, 255, 0.75);
   bottom: 5%;
@@ -146,7 +152,9 @@ footer {
   text-decoration: none;
   color: initial;
 }
-*:not(footer) a:hover {
+nav a:hover,
+footer a:hover,
+#inline-credit a:hover {
   text-decoration: underline;
 }
 
