--- a/style.css
+++ b/style.css
@@ -91,10 +91,21 @@ footer {
 #social-media {
   grid-area: social;
 }
+@keyframes rotateAnim {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 #logo {
   margin: 10%;
   height: 80%;
   width: 80%;
+}
+#logo:hover {
+  animation: rotateAnim 4s infinite linear;
 }
 #image {
   margin: 0;
@@ -182,7 +193,7 @@ aside {
   overflow-y: auto;
 }
 
-@keyframes flashing-text {
+@keyframes flashingAnim {
   0% {
     color: red;
   }
@@ -195,7 +206,7 @@ aside {
 }
 
 .flashing {
-  animation: flashing-text 2s infinite;
+  animation: flashingAnim 2s infinite;
   text-align: center;
 }
 
