--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ footer {
   color: initial;
 }
 nav a:hover,
-footer a:hover,
+#legal a:hover,
 #inline-credit a:hover {
   text-decoration: underline;
 }
