--- a/layouts/ultrawide.css
+++ b/layouts/ultrawide.css
@@ -1,12 +1,26 @@
 #grid-container {
   display: none;
 }
-
-video {
-  height: 100vh;
-  width: 100vw;
+#jumpscare {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: relative;
 }
-
+#warning {
+  font-size: 8vw;
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  color: red;
+  position: absolute;
+  bottom: 20%;
+  width: 100%;
+  text-align: center;
+}
+video {
+  width: 90vw;
+}
 body {
   background-color: black;
   background-image: none;
