block access if autoplay is not allowed

--- a/layouts/ultrawide.css
+++ b/layouts/ultrawide.css
@@ -19,7 +19,7 @@
     opacity: 0;
   }
 }
-#warning {
+#resolution-warning {
   opacity: 0;
   animation: flashingAnim 2.1s ease-in 5;
   font-size: 8vw;
